bk_ida/gccida/c3/peep2_regno_dead_p
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_regno_dead_p/src/recog.c:3346:7: error: use of undeclared identifier 'peep2_insn_data_0'; did you mean 'peep2_insn_data'?
if ( !peep2_insn_data_0[v3].insn ) 
      ^~~~~~~~~~~~~~~~~
      peep2_insn_data
/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_regno_dead_p/src/recog.c:2841:31: note: 'peep2_insn_data' declared here
static struct peep2_insn_data peep2_insn_data[MAX_INSNS_PER_PEEP2 + 1];
                              ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O3/gcc-clang-O3/peep2_regno_dead_p/src/obj/recog.o] Error 1
